GNOME Bugzilla – Bug 777725
libtracker-miner: Fix use of an uninitialised variable
Last modified: 2017-01-25 11:40:24 UTC
Patch attached.
Created attachment 344194 [details] [review] libtracker-miner: Fix use of an uninitialised variable In the error path, finish_current_directory() was called on `notifier` before it had been initialised. Coverity CID: 1397952
Comment on attachment 344194 [details] [review] libtracker-miner: Fix use of an uninitialised variable Meh, I even missed the compiler warning :). Please go ahead.
Attachment 344194 [details] pushed as 9d9b2c8 - libtracker-miner: Fix use of an uninitialised variable