libtracker-miner: Fix use of an uninitialised variable

In the error path, finish_current_directory() was called on `notifier`
before it had been initialised.

Coverity CID: 1397952

https://bugzilla.gnome.org/show_bug.cgi?id=777725